@@ -18,35 +18,35 @@
    	<!-- this should produce a single file in the dest dir -->
 	 	<target name="testSimpleScale" depends="init">
 			<image includes="*.jpg" srcdir="${src.dir}" destdir="${dest.dir}" overwrite="no" failonerror="no">
-				<scale width="300" keepproportions="true"/>
+				<scale width="300" proportions="width"/>
 			</image>   
 		</target>   
 
    	<!-- this should put some text in the log -->
 	 	<target name="testEchoToLog" depends="init">
 			<image includes="*.jpg" srcdir="${src.dir}" destdir="${dest.dir}" overwrite="no" failonerror="no">
-				<scale width="300" keepproportions="true"/>
+				<scale width="300" proportions="width"/>
 			</image>   
 		</target>   
 		
    	<!-- this should produce a single file in the dest dir -->
 	 	<target name="testFailOnError" depends="init">
 			<image includes="*.jpg" srcdir="${src.dir}" destdir="${dest.dir}" overwrite="no" failonerror="yes">
-				<scale width="300" keepproportions="true"/>
+				<scale width="300" proportions="width"/>
 			</image>   
 		</target>   		
 		
 		<!-- this should produce a single file in the dest dir, overwriting any existing file -->
 		<target name="testOverwriteTrue" depends="init">
 			<image includes="*.jpg" srcdir="${src.dir}" destdir="${dest.dir}" overwrite="true" failonerror="no">
-				<scale width="300" keepproportions="true"/>
+				<scale width="300" proportions="width"/>
 			</image>   
 		</target>   
 
 		<!-- this should not overwrite the existing file -->
 		<target name="testOverwriteFalse" depends="init">
 			<image includes="*.jpg" srcdir="${src.dir}" destdir="${dest.dir}" overwrite="false" failonerror="no">
-				<scale width="300" keepproportions="true"/>
+				<scale width="300" proportions="width"/>
 			</image>   
 		</target>   
    
